--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>Pixels</title>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
         <script type="text/javascript" src="javascript.js"></script>
-        <link rel="text/stylesheet" href="stylesheet.css" />
+        <link rel="stylesheet" type="text/css" href="stylesheet.css" />
     </head>
     <body>
         <h1>Pixels!</h1>
