--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <h1>Pixels!</h1>
         <hr />
-        <canvas id="canvas" />
+        <center><canvas id="canvas" width="300" height="200" style="border: 1px dotted black;" /></center>
     </body>
 </html>
