Split up javascript into more files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Pixels</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
         <script type="text/javascript" src="javascript.js"></script>
+        <script type="text/javascript" src="drawing.js"></script>
+        <script type="text/javascript" src="animation.js"></script>
         <link rel="stylesheet" type="text/css" href="stylesheet.css" />
     </head>
     <body>
