Almost finished drawRotatedBox

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <body>
         <h1>Pixels!</h1>
         <hr />
-        <center><canvas id="canvas" width="300" height="200" style="border: 1px dotted black;" /></center>
+        <center>
+			<button type="button" onclick="launch()">Start</button>
+			<br/>
+			<canvas id="canvas" width="300" height="200" style="border: 1px dotted black;" />
+		</center>
     </body>
 </html>
