Fixed spinning box

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <hr />
         <center>
 			<button type="button" onclick="launch()">Start</button>
+			<button type="button" onclick="document.location.reload()">Reload</button>
 			<br/>
 			<canvas id="canvas" width="300" height="200" style="border: 1px dotted black;" />
 		</center>
