Working on a new line alorithm

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <hr />
         <center>
 			<button type="button" onclick="launch()">Start</button>
+			<button type="button" onclick="clearInterval(intervalID)">Stop</button>
 			<button type="button" onclick="document.location.reload()">Reload</button>
+			<button type="button" onclick="clearBoard()">Clear</button>
 			<br/>
 			<canvas id="canvas" width="300" height="200" style="border: 1px dotted black;" />
 		</center>
