Added trig, lookup tables and a really fast clearBoard()

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
         <script type="text/javascript" src="javascript.js"></script>
         <script type="text/javascript" src="point.js"></script>
+        <script type="text/javascript" src="trig.js"></script>
         <script type="text/javascript" src="drawing.js"></script>
         <script type="text/javascript" src="animation.js"></script>
         <link rel="stylesheet" type="text/css" href="stylesheet.css" />
@@ -44,7 +45,8 @@
 			</div>
 			<div id="divFrameDrawSpeed" style="text-align:center; display:none;">
 				<label for="FrameDrawSpeed">Frame Draw Speed: </label>
-				<input style="width: 50px; border: 0px;" name="FrameDrawSpeed" id="FrameDrawSpeed" type="text" />
+				<input style="width: 24px; border: 0px;" name="FrameDrawSpeed" id="FrameDrawSpeed" type="text" />
+				<span>ms</span>
 			</div>
 		</center>
     </body>
