--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 			<div>
 				<label for="animationSelector">Animation:</label>
 				<select name="animationSelector" id="animationSelector">
+					<option value="3DBox" selected>3D Box</option>
 					<option value="SineWave">Sine Wave</option>
 					<option value="BoxResize">Box Resize</option>
-					<option value="BoxSpin" selected>Box Spin</option>
+					<option value="BoxSpin">Box Spin</option>
 					<option value="RandomLines">Random Lines</option>
 					<option value="CircleOfLines">Circle of Lines</option>
 				</select>
